<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llPrincipal"
        android:layout_width="387dp"
        android:layout_height="704dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <TextView
            android:id="@+id/tvTitulo"
            style="@style/Widget.Material3.MaterialTimePicker.Display.HelperText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/black"
            android:backgroundTint="@color/md_theme_inversePrimary"
            android:gravity="center"
            android:text="@string/tvTitulo"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llSwitch"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Switch
                android:id="@+id/swAnonimo"
                android:layout_width="164dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/swAnonimo"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tvAnonimo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tvAnonimo"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tVSOpertivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/tVSOpertivo"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgSO"
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/rbMac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbMac" />

            <RadioButton
                android:id="@+id/rbWindows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbWindows" />

            <RadioButton
                android:id="@+id/rbLinux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/rbLinux"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <TextView
            android:id="@+id/tVEspecialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/tVEspecialidad"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llEspecialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <CheckBox
                android:id="@+id/ckDaw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ckDaw" />

            <CheckBox
                android:id="@+id/ckDam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ckDam" />

            <CheckBox
                android:id="@+id/ckAsir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ckAsir" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvHorasEstudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/tvHorasEstudio"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/sbHoras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp" />

        <!-- Fila de botones: Validar, Cuantas y Resumen -->
        <LinearLayout
            android:id="@+id/filaBotones1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/alternarBotones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btValidar"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_theme_inversePrimary"
                    android:text="@string/btValidar" />

                <Button
                    android:id="@+id/btCuantas"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_theme_inversePrimary"
                    android:text="@string/btCuantas" />

                <Button
                    android:id="@+id/btResumen"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_theme_inversePrimary"
                    android:text="@string/btResumen" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>

        <!-- Fila de botones: Borrar reiniciar y slir -->
        <LinearLayout
            android:id="@+id/filaBotones2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/btBorrar"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/md_theme_outlineVariant"
                android:spacing="8dp"
                android:text="@string/btBorrar" />

            <Button
                android:id="@+id/btReiniciar"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/md_theme_outlineVariant"
                android:spacing="8dp"
                android:text="@string/btReiniciar" />

            <Button
                android:id="@+id/btSalir"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/md_theme_outlineVariant"
                android:spacing="8dp"
                android:text="@string/btSalir" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>